[project]
name = "rancher-ai-db"
version = "0.1.0"
description = "Database supervisor for Rancher AI"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary,pool]>=3.3.2",
    "python-dotenv>=1.0.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-postgres>=0.1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
